--- a/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
+++ b/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
@@ -5,9 +5,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
    <center>
       <AnchorPane>
          <children>
@@ -15,10 +17,11 @@
                <children>
                   <TextField fx:id="txt_apiKey" promptText="API KEY" />
                   <TextField fx:id="txt_charName" promptText="Character Name" />
+                  <HBox fx:id="hbox_disciplineCheck" />
                   <Button mnemonicParsing="false" onAction="#analyse" text="Analyse" />
-                  <ScrollPane fitToHeight="true" fitToWidth="true">
+                  <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="SOMETIMES">
                      <content>
-                        <VBox fx:id="scroll_recipes" />
+                        <FlowPane fx:id="scroll_recipes" prefHeight="400.0" prefWidth="600.0" />
                      </content>
                   </ScrollPane>
                </children>
