--- a/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/recipe/RecipeView.fxml
+++ b/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/recipe/RecipeView.fxml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root alignment="TOP_CENTER" type="VBox" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="TOP_CENTER" type="VBox" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="lbl_outputName" text="Label" />
+      <Label fx:id="lbl_outputName" text="&lt;Output name&gt;" />
+      <ImageView fx:id="img_outputItem" fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true" />
       <GridPane>
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -23,15 +26,17 @@
         </rowConstraints>
          <children>
             <Label text="Source" />
-            <Label text="Type" GridPane.rowIndex="1" />
-            <Label text="Output qty." GridPane.rowIndex="2" />
-            <Label text="Discipline" GridPane.rowIndex="3" />
-            <Label text="Req. rating" GridPane.rowIndex="4" />
-            <VBox fx:id="vbox_discipline" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label fx:id="lbl_source" text="Label" GridPane.columnIndex="1" />
-            <Label fx:id="lbl_type" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="lbl_outputQty" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="lbl_reqRating" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Type" GridPane.rowIndex="2" />
+            <Label text="Output qty." GridPane.rowIndex="3" />
+            <Label text="Discipline" GridPane.rowIndex="4" />
+            <Label text="Req. rating" GridPane.rowIndex="5" />
+            <VBox fx:id="vbox_discipline" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="lbl_source" text="&lt;Source&gt;" GridPane.columnIndex="1" />
+            <Label fx:id="lbl_type" text="&lt;Type&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lbl_outputQty" text="&lt;Output qty.&gt;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="lbl_reqRating" text="&lt;Req. rating&gt;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Material Type" GridPane.rowIndex="1" />
+            <Label fx:id="lbl_materialType" text="&lt;Material Type&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <Label text="Ingredients" />
