--- a/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
+++ b/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
@@ -2,35 +2,28 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
    <center>
-      <AnchorPane>
+      <VBox>
          <children>
-            <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <TextField fx:id="txt_apiKey" promptText="API KEY" />
-                  <TextField fx:id="txt_charName" promptText="Character Name" />
-                  <HBox fx:id="hbox_disciplineCheck" />
-                  <HBox fx:id="hbox_langRadio" />
-                  <Button mnemonicParsing="false" onAction="#analyse" text="Analyse" />
-                  <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="SOMETIMES">
-                     <content>
-                        <FlowPane fx:id="scroll_recipes" prefHeight="400.0" prefWidth="600.0" />
-                     </content>
-                  </ScrollPane>
-               </children>
-            </VBox>
-         </children></AnchorPane>
+            <VBox fx:id="vbox_charDisciplines" />
+            <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
+               <content>
+                  <FlowPane fx:id="scroll_recipes" prefHeight="400.0" prefWidth="600.0" />
+               </content>
+            </ScrollPane>
+         </children>
+      </VBox>
    </center>
    <bottom>
       <VBox fx:id="vbox_tasks" BorderPane.alignment="CENTER">
@@ -48,4 +41,16 @@
          </children>
       </VBox>
    </bottom>
+   <top>
+      <VBox>
+         <children>
+            <TextField fx:id="txt_apiKey" promptText="API KEY" />
+            <TextField fx:id="txt_charName" promptText="Character Name" />
+            <HBox fx:id="hbox_disciplineCheck" />
+            <HBox fx:id="hbox_langRadio" />
+            <CheckBox fx:id="chbx_fromRecipe" mnemonicParsing="false" text="include from recipe" />
+            <Button mnemonicParsing="false" onAction="#analyse" text="Analyse" />
+         </children>
+      </VBox>
+   </top>
 </BorderPane>
