--- a/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
+++ b/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -31,12 +30,15 @@
          <children>
             <HBox VBox.vgrow="ALWAYS">
                <children>
-                  <Label text="Label" />
-                  <ProgressBar fx:id="pb_getItems" progress="0.0" HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </ProgressBar>
+                  <Label contentDisplay="RIGHT" text="Recipes">
+                     <graphic>
+                        <ProgressBar fx:id="pb_getRecipes" prefHeight="18.0" prefWidth="200.0" progress="0.0" />
+                     </graphic></Label>
+                  <Label contentDisplay="RIGHT" text="Items">
+                     <graphic>
+                        <ProgressBar fx:id="pb_getItems" prefHeight="18.0" prefWidth="200.0" progress="0.0" />
+                     </graphic>
+                  </Label>
                </children>
             </HBox>
          </children>
