--- a/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
+++ b/GW2Tools/src/main/java/de/rohmio/gw2/tools/view/main/MainView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
    <center>
       <VBox>
          <children>
@@ -61,7 +61,12 @@
                   <CheckBox fx:id="chbx_recipesRecursively" mnemonicParsing="false" text="Show Recipes Recursively" />
                </children>
             </HBox>
-            <TextField fx:id="txt_filter" promptText="Filter" />
+            <HBox>
+               <children>
+                  <TextField fx:id="txt_filter" promptText="Filter" HBox.hgrow="ALWAYS" />
+                  <TextField fx:id="txt_minLevel" promptText="Min Level" />
+               </children>
+            </HBox>
          </children>
       </VBox>
    </top>
