--- a/GW2Tools/src/main/resources/fxml/MainView.fxml
+++ b/GW2Tools/src/main/resources/fxml/MainView.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
    <bottom>
       <VBox fx:id="vbox_tasks" BorderPane.alignment="CENTER">
          <children>
@@ -40,10 +40,11 @@
          <children>
             <HBox>
                <children>
-                  <ChoiceBox fx:id="choice_charName" prefWidth="150.0" />
-                  <Button mnemonicParsing="false" onAction="#getCharacters" text="Get Characters" />
+                  <Label text="Account Name: " />
+                  <Label fx:id="lbl_accountName" />
                </children>
             </HBox>
+            <ChoiceBox fx:id="choice_charName" prefWidth="150.0" />
             <HBox fx:id="hbox_disciplineCheck" />
             <HBox alignment="CENTER_LEFT">
                <children>
@@ -58,7 +59,6 @@
                   <TextField fx:id="txt_minLevel" promptText="%min_level" />
                </children>
             </HBox>
-            <VBox fx:id="vbox_charDisciplines" />
             <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
                <content>
                   <FlowPane fx:id="scroll_recipes" hgap="10.0" prefHeight="400.0" prefWidth="600.0" vgap="20.0" />
@@ -70,19 +70,9 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="%file">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
           <Menu mnemonicParsing="false" text="%edit">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#openSettings" text="%settings" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="%help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
             </items>
           </Menu>
         </menus>
