--- a/GW2Tools/src/main/resources/fxml/SettingsView.fxml
+++ b/GW2Tools/src/main/resources/fxml/SettingsView.fxml
@@ -3,14 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<GridPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="de.rohmio.gw2.tools.view.main.SettingsViewController">
+<GridPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.SettingsViewController">
    <children>
       <ComboBox fx:id="combo_lang" prefWidth="150.0" />
-      <Button mnemonicParsing="false" onAction="#apply" text="Button" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onAction="#apply" text="Save" GridPane.rowIndex="2" />
       <TextField fx:id="txt_apiKey" prefHeight="25.0" prefWidth="503.0" GridPane.rowIndex="1" />
    </children>
    <rowConstraints>
@@ -18,4 +18,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
    </rowConstraints>
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
 </GridPane>
