--- a/GW2Tools/src/main/resources/fxml/SettingsView.fxml
+++ b/GW2Tools/src/main/resources/fxml/SettingsView.fxml
@@ -10,7 +10,7 @@
 <GridPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.SettingsViewController">
    <children>
       <ComboBox fx:id="combo_lang" prefWidth="150.0" />
-      <Button mnemonicParsing="false" onAction="#apply" text="Save" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onAction="#apply" text="%save" GridPane.rowIndex="2" />
       <TextField fx:id="txt_apiKey" prefHeight="25.0" prefWidth="503.0" GridPane.rowIndex="1" />
    </children>
    <rowConstraints>
