--- a/GW2Tools/src/main/resources/fxml/MainView.fxml
+++ b/GW2Tools/src/main/resources/fxml/MainView.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.MainViewController">
    <bottom>
       <VBox fx:id="vbox_tasks" BorderPane.alignment="CENTER">
          <children>
@@ -49,7 +49,7 @@
                <children>
                   <CheckBox fx:id="chbx_byableRecipe" mnemonicParsing="false" text="include from recipe" />
                   <CheckBox fx:id="chbx_showWholeRecipe" disable="true" mnemonicParsing="false" text="Show Recipes Recursively" />
-                  <CheckBox fx:id="chbx_showAlreadyLearned" disable="true" mnemonicParsing="false" text="Show already learned" />
+                  <CheckBox fx:id="chbx_showAlreadyLearned" mnemonicParsing="false" text="Show already learned" />
                </children>
             </HBox>
             <HBox>
