--- a/GW2Tools/src/main/resources/fxml/MainView.fxml
+++ b/GW2Tools/src/main/resources/fxml/MainView.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -78,7 +79,7 @@
             </VBox>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
                <content>
-                  <VBox fx:id="vbox_recipes" alignment="TOP_CENTER" />
+                  <FlowPane fx:id="flow_recipes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
                </content>
         </ScrollPane>
         <AnchorPane>
