--- a/GW2Tools/src/main/resources/fxml/SettingsView.fxml
+++ b/GW2Tools/src/main/resources/fxml/SettingsView.fxml
@@ -1,24 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.SettingsViewController">
+
+<GridPane prefHeight="259.0" prefWidth="509.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.rohmio.gw2.tools.view.main.SettingsViewController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="211.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="347.0" minWidth="10.0" prefWidth="347.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <ComboBox fx:id="combo_lang" prefWidth="150.0" />
-      <Button mnemonicParsing="false" onAction="#apply" text="%save" GridPane.rowIndex="2" />
-      <TextField fx:id="txt_apiKey" prefHeight="25.0" prefWidth="503.0" GridPane.rowIndex="1" />
+      <Label text="Language" />
+      <Label text="API-Key" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onAction="#apply" text="%save" GridPane.rowIndex="7" />
+      <ComboBox fx:id="combo_lang" prefWidth="150.0" GridPane.columnIndex="1" />
+      <TextField fx:id="txt_apiKey" prefHeight="25.0" prefWidth="503.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <CheckBox fx:id="cbx_proxy" mnemonicParsing="false" selected="true" text="Disable Proxy" GridPane.rowIndex="2" />
+      <Label fx:id="lbl_host" text="Host" GridPane.rowIndex="3" />
+      <Label fx:id="lbl_port" text="Port" GridPane.rowIndex="4" />
+      <Label fx:id="lbl_user" text="User" GridPane.rowIndex="5" />
+      <Label fx:id="lbl_password" text="Password" GridPane.rowIndex="6" />
+      <TextField fx:id="txt_host" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <TextField fx:id="txt_port" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <TextField fx:id="txt_user" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <TextField fx:id="txt_password" GridPane.columnIndex="1" GridPane.rowIndex="6" />
    </children>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" />
-   </rowConstraints>
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </GridPane>
